# Messi-Analytics-Agent

./: .gitignore  README.md  main.py  messi.ipynb  pyproject.toml
